# chuk-mcp-open-meteo

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  VERIFICATION.md  fly.toml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
examples/: MCP_CLI_TESTING.md  README.md  claude_desktop_config.json  claude_desktop_config_uv.json  example_basic.py  example_trip_planner.py  interactive_demo.py  mcp_config.json  test_all.sh  test_mcp_protocol.py  test_with_mcp_cli.sh  usage_examples.md
src/chuk_mcp_open_meteo/: __init__.py  _batch.py  _constants.py  models.py  server.py  server.py.backup
src/chuk_mcp_open_meteo/tools/: __init__.py  air_quality.py  forecast.py  geocoding.py  historical.py  marine.py  weather_codes.py
tests/: __init__.py  conftest.py  test_server.py
